<resources>
    <string name="app_name" translatable="false">Mokranjatzz365Bet</string>
    <string name="welcome">Dobrodošli na Mokranjatzz365Bet!</string>

    <!--Formalnosti-->
    <string name="signup">Novi korisnik?</string>
    <string name="existing_user">Postojeći korisnik</string>
    <string name="email">E-mail adresa</string>
    <string name="full_name">Ime i prezime</string>
    <string name="username">Korisničko ime</string>
    <string name="password">Lozinka</string>
    <string name="login">Uloguj se</string>
    <string name="register">Registracija</string>
    <string name="logout">Izloguj se</string>
    <string name="home">Početna</string>
    <string name="update">Ažuriraj</string>
    <string name="slogan">\"Igra je melodija života.\"</string>
    <string name="profile">Profil</string>
    <string name="user">Korisnik</string>

    <!--Firebase-->
    <string name="test_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--In - app bullsh*t-->
    <string name="lista">Lista</string>
    <string name="tiketi">Pregled tiketa</string>
    <string name="sportovi">Sportovi</string>
    <string name="usage_rights">Prava korišćenja</string>
    <string name="pick_kvota_title">Izabrana utakmica:</string>
    <string name="pick_kvota_date">Datum utakmice:</string>
    <string name="pick_kvota_time">Vreme utakmice:</string>
    <string name="update_profile">Pregled profila / Promena lozinke</string>
    <string name="new_password">Unesite novu lozinku:</string>
    <string name="repeat_password">Ponovite lozinku:</string>
    <string name="credit_value">Stanje na računu (RSD): </string>
    <string name="change_password_txt">Promena lozinke</string>
    <string name="total_kvota">Ukupna kvota:</string>
    <string name="potential_win">Potencijalni dobitak (RSD):</string>

    <!--Za navigaciju i ostalo definisano od strane Android-a-->
    <string name="title_activity_home">Početna</string>
    <string name="navigation_drawer_open">Otvori navigaciju</string>
    <string name="navigation_drawer_close">Zatvori navigatiju</string>
    <string name="action_settings">Podešavanja</string>

    <!--Tekstovi-->
    <string name="register_info">Dobrodošli!\n\nMokranjatzz365Bet je Vaša <b>nova omiljena</b> kladionica!
        Preporučujemo da pažljivo pročitate <b>prava i uslove korišćenja</b>.\n\nDozvoljeno samo punoletnim osobama.</string>
    <string name="usage_rights_intro">
        Овим документом правно уређујемо положај новоосноване компаније Mokranjatzz365Bet, као и регистрацију, Услове коришћења, као и Одрицања од одговорности. Напомињемо да одредбе Услова коришћења важе и за облике обављања привредне делатности који су наша конкуренција и послују у складу са посебним условима.
    </string>
    <string name="usage_rights_1">
        <b>Положај компаније</b>
        \n
        <b><i>Члан 1.</i></b>
        \n\n
        Mokranjatzz365Bet је институција која обавља своју делатност у циљу стицања добити. Наша компетентна платформа за циљ има реформу кладионичарског тржишта у Србији и југоисточној Европи, над којим суверено влада Mozzart.
        \n
        Ова транспарентна платформа у електронској форми треба да пружи професионално одрађен систем у којем свако добија. Свесни смо и потребе пунолетних грађана Србије којима је дословце мука Mozzart кладионица раштрканих по целој држави; обећавали су све – од игле до локомотиве, а донели само муке и патњу.
        \n
        Наша платформа је основана ради спречавања и заустављања монопола на тржишту, и као таква, гарантујемо квалитет и задовољство сваког потрошача.
        \n
    </string>
    <string name="usage_rights_2">
        <b>Регистрација</b>
        \n
        <b><i>Члан 2.</i></b>
        \n\n
        Дана 10. маја 2016. године, књиговођа Небојша из Београда је извршио регистрацију података и докумената у складу са законом Републике Србије о регистрацији.
        \n
        Регистрована и заведена су следећа лица:
        \n
        · Као извршни директор, Стефан Ђокић, ЈМБГ 2105996710207
        \n
        · Као директор финансија, Јован Миљевић, ЈМБГ 0210996710267
        \n
        · Као шеф стручног штаба за базе података, Стефан Јанковић, ЈМБГ 1502996710075
        \n
    </string>
    <string name="usage_rights_3">
        <b>Услови коришћења и Одрицања од одговорности</b>
        \n
        <b><i>Члан 3.</i></b>
        \n\n
        Важно је напоменути да је искључена било каква одговорност Mokranjatzz365Bet (укључујући и непажњу) за штете или последичне штете које настану посредним или непосредним позивањем на садржај Статута или његово коришћење ради доказивања баналности (односно због потенцијалне немогућности позивања или коришћења). Све информације доступне на званичној платформи искључиво су информативног карактера, и стога, не смеју се користити нити дистрибуирати трећим лицима у комерцијалне сврхе. Квоте на платформи су доступне сваком кориснику под условима Creative Commons Ауторство 3.0 Србија лиценце и могу се користити под условом да се наведе извор истих, односно компанија Mokranjatzz365Bet.
        \n
    </string>
    <string name="usage_rights_4">
        <b>Важне напомене</b>
        \n
        <b><em>Члан 4.</em></b>
        \n\n
        - Уколико нађете проблем приликом коришћења платформе, у што краћем року пријавите грешку надлежном органу.\n\n
        - Све надоградње саме платформе ће бити најављиване, и сваки регистровани корисник ће путем електронске поште бити благовремено обавештен о унапред заказаној надоградњи.\n\n
        - Уколико као корисник сматрате да је платформа Mokranjatzz365Bet неозбиљност, траћење времена, будалаштина, или слично, Ривотрил у тродуплој дози Вам не гине.\n\n
        - Препоручујемо употребу софтвера искључиво од лиценцираних достављача, које ће компанија Mokranjatzz365Bet уредбом овог документа назначити.\n\n
        - Документ се штампа у три (3) копије, од којих један иде извршном директору, други иде књиговођи, а трећи у архиву Новог Сада, код надлежног главног архиватора Чварков Ђорђа.\n\n
    </string>
    <string name="title_activity_webview">webview</string>

</resources>
