<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:title="Mokranjatzz365Bet">

            <menu>

                <item
                    android:id="@+id/nav_home"
                    android:title="@string/home" />

                <item
                    android:id="@+id/nav_sportovi"
                    android:title="@string/sportovi" />
                <item
                    android:id="@+id/nav_tiketi"
                    android:title="@string/tiketi" />

            </menu>

        </item>

     </group>

    <group android:checkableBehavior="single">

        <item android:title="@string/user">

            <menu>

                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile" />

                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout" />

            </menu>

        </item>

    </group>

</menu>
